# LittleOrange

./: .env.example  .gitignore  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.example.json  main.py  pyproject.toml  test_system.py
.claude/: settings.local.json
docs/: API.md  DEVELOPMENT.md
little_orange/: __init__.py  agent.py  config.py  llm.py  skills.py  tools.py
little_orange/builtin_skills/: __init__.py
